Cleanup and reorganize

--- a/client/components/logged-out-form/link-item.scss
+++ b/client/components/logged-out-form/link-item.scss
@@ -7,7 +7,7 @@
 	cursor: pointer;
 	text-decoration: underline;
 
-	.is-p2.invite-accept &,
+	.is-p2-invite.invite-accept &,
 	.is-p2-signup .signup__step.is-user & {
 		padding: 0;
 	}
