--- a/client/my-sites/invites/p2/style.scss
+++ b/client/my-sites/invites/p2/style.scss
@@ -2,7 +2,7 @@
 @import '@wordpress/base-styles/breakpoints';
 @import '@wordpress/base-styles/mixins';
 
-.is-p2.invite-accept {
+.is-p2-invite.invite-accept {
 	position: fixed;
 	top: 0;
 	left: 0;
