--- a/client/components/logged-out-form/links.scss
+++ b/client/components/logged-out-form/links.scss
@@ -12,7 +12,7 @@
 		margin: 0 auto 8px;
 	}
 
-	.is-p2.invite-accept &::before,
+	.is-p2-invite.invite-accept &::before,
 	.is-p2-signup .signup__step.is-user &::before {
 		display: none;
 	}
