Happychat: clean up CSS for the floating and docked styles

--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -677,8 +677,7 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 	text-align: center;
 }
 
-.layout.has-chat.is-section-jetpack-connect:not( .is-group-editor ):not( .is-section-theme ):not( .is-group-reader )
-	.layout__content {
+.layout.has-chat.is-section-jetpack-connect .layout__content {
 	@include breakpoint-deprecated( '>1040px' ) {
 		padding-left: 32px;
 		padding-right: 319px;
