--- a/client/components/happychat/style.scss
+++ b/client/components/happychat/style.scss
@@ -6,9 +6,9 @@
 	overflow: hidden;
 	position: fixed;
 	bottom: 0;
-	right: 12px;
+	right: 0;
 	font-size: $font-body-small;
-	display: none;		/* disabled */
+	display: none; /* disabled */
 	box-sizing: border-box;
 
 	transform: translateZ( 0 );
@@ -34,13 +34,14 @@
 		background: var( --color-neutral-0 );
 		bottom: 0;
 		z-index: z-index( 'root', '.happychat__container.is-open' );
+		box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.2 ), 0 1px 10px rgba( 0, 0, 0, 0.1 );
+		width: 280px;
 	}
-
 }
 
 // experiment: style scrollbars
-.happychat, .happychat__page {
-
+.happychat,
+.happychat__page {
 	::-webkit-scrollbar {
 		width: 12px;
 		height: 12px;
@@ -55,11 +56,8 @@
 		&:hover {
 			background-color: var( --color-neutral-light );
 		}
-
 	}
-
 }
-
 
 /**
  * Minimize animation
@@ -80,7 +78,16 @@
 		position: relative;
 		animation: happychat-disappear 0.1s 1 forwards;
 	}
+}
 
+.happychat__conversation,
+.happychat__welcome {
+	min-height: 160px;
+	max-height: 220px;
+}
+
+.happychat__message > textarea {
+	padding: 12px;
 }
 
 @keyframes happychat-disappear {
@@ -102,7 +109,8 @@
 	50% {
 		opacity: 1;
 	}
-	99%, 100% {
+	99%,
+	100% {
 		right: 25px;
 		width: 34px;
 		max-height: 34px;
@@ -122,7 +130,8 @@
 		50% {
 			opacity: 1;
 		}
-		99%, 100% {
+		99%,
+		100% {
 			right: 25px;
 			width: 34px;
 			max-height: 34px;
@@ -136,59 +145,11 @@
 }
 
 /**
- * Panel mode
- */
-
-@include breakpoint-deprecated( '>480px' ) {
-
-	.layout:not( .is-section-happychat ) {
-		.happychat__container.is-open {
-			box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.2 ), 0 1px 10px rgba( 0, 0, 0, 0.1 );
-			width: 280px;
-		}
-
-		.happychat__message {
-			height: auto;
-		}
-
-		.happychat__message > textarea {
-			padding: 12px;
-		}
-
-		.happychat__conversation,
-		.happychat__welcome {
-			min-height: 160px;
-			max-height: 220px;
-		}
-	}
-
-}
-
-@include breakpoint-deprecated( '<480px' ) {
-
-	.layout:not( .is-section-happychat ) {
-		.happychat__container.is-open {
-			right: 0;
-		}
-
-		.happychat__conversation,
-		.happychat__welcome {
-			min-height: 160px;
-			max-height: 220px;
-		}
-	}
-
-}
-
-
-/**
  * Sidebar mode
  */
 
 @include breakpoint-deprecated( '>1040px' ) {
-
-	// be more specific in scope to override the panel mode
-	.layout.has-chat:not( .is-group-editor ):not( .is-section-theme ):not( .is-group-reader ):not( .has-no-sidebar ) .happychat__container.is-open {
+	.happychat__container.is-open {
 		position: fixed;
 		height: calc( 100% - var( --masterbar-height ) );
 		bottom: 0;
@@ -214,12 +175,8 @@
 			padding: 11px;
 		}
 
-		.happychat__message {
-			height: auto;
-		}
-
 		.happychat__message > textarea {
-			padding: 12px 12px 32px;
+			padding-bottom: 32px;
 		}
 
 		.happychat__conversation,
@@ -227,24 +184,17 @@
 			min-height: 160px;
 			max-height: none;
 		}
-
 	}
 
+	.layout.has-chat {
+		// add space in the main column for the docked sidebar
+		.layout__content {
+			padding: 79px 304px 32px;
+		}
 
-	// add space in the main column for the docked sidebar
-	.layout.has-chat:not( .is-group-editor ):not( .is-section-theme ):not( .is-group-reader ):not( .has-no-sidebar ) .layout__content {
-		padding: 79px 304px 32px;
+		// make space in customizer
+		.main.customize.is-iframe {
+			right: 272px;
+		}
 	}
-
-	// adjust when scoll arrows show up in stats insights when panel is open
-	.has-chat.is-section-stats .post-trends__scroll-left,
-	.has-chat.is-section-stats .post-trends__scroll-right {
-			display: block;
-	}
-
-	// make space in customizer
-	.has-chat .main.customize.is-iframe {
-		right: 272px;
-	}
-
 }
