--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -124,7 +124,7 @@
 }
 
 // adjust when scoll arrows show up in stats insights when chat panel is open
-.layout.has-chat.is-section-stats {
+.layout.has-chat.has-docked-chat.is-section-stats {
 	.post-trends__scroll-left,
 	.post-trends__scroll-right {
 		display: block;
