--- a/client/my-sites/checkout/checkout-thank-you/difm/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/difm/style.scss
@@ -1,95 +1,78 @@
+@import '@wordpress/base-styles/breakpoints';
+@import '@wordpress/base-styles/mixins';
+
 .difm-lite-thank-you {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	@include breakpoint-deprecated( '<660px' ) {
-		flex-wrap: wrap;
-	}
-}
-
-.difm-lite-thank-you.is-placeholder {
-	.difm-lite-thank-you__heading,
-	.difm-lite-thank-you__text {
-		@include placeholder( --color-text-subtle );
-	}
-
-	.difm-lite-thank-you__heading {
-		width: 78%;
-	}
-
-	.difm-lite-thank-you__text {
-		width: 82%;
-	}
-
-	.difm-lite-thank-you__image {
-		display: none;
-	}
-
-	.difm-lite-thank-you__buttons {
-		.button {
-			@include placeholder( --color-neutral-10 );
+	&.main {
+		max-width: 960px;
+		> .card {
+			border-left: 1px solid #ddd;
+			border-right: 1px solid #ddd;
+			box-shadow: none;
 		}
 	}
-}
 
-.difm-lite-thank-you__heading {
-	color: var( --color-text-subtle );
-	clear: none;
-	font-size: $font-title-small;
-}
+	.difm-lite-thank-you__header {
+		position: relative;
+		color: var( --color-text-subtle );
+		padding: 12px 24px 48px;
+		text-align: center;
 
-.difm-lite-thank-you__description {
-	color: var( --color-text-subtle );
-	margin-bottom: 16px;
-	margin-top: 16px;
-}
-
-.difm-lite-thank-you__image {
-	flex-shrink: 0;
-	width: 128px;
-
-	@include breakpoint-deprecated( '>660px' ) {
-		width: 178px;
-	}
-}
-
-.difm-lite-thank-you__icon {
-	margin-bottom: 20px;
-	@include breakpoint-deprecated( '>660px' ) {
-		width: auto;
-	}
-}
-
-.difm-lite-thank-you__text {
-	margin-bottom: 20px;
-	width: 100%;
-	@include breakpoint-deprecated( '>660px' ) {
-		width: auto;
-	}
-}
-
-.difm-lite-thank-you__buttons {
-	width: 100%;
-
-	.button {
-		@include breakpoint-deprecated( '<480px' ) {
+		.difm-lite-thank-you__header-icon {
 			display: block;
+			margin: 0 auto;
+			position: relative;
+			width: 132px;
+			height: 132px;
 		}
 
-		@include breakpoint-deprecated( '>480px' ) {
-			&:first-of-type {
-				margin-right: 16px;
-				margin-bottom: 6px;
+		.difm-lite-thank-you__header-content {
+			margin: 0 auto;
+			max-width: 750px;
+			.difm-lite-thank-you__header-heading {
+				font-size: 1.5rem;
+				font-weight: 400;
+				margin: 24px 0 8px;
 			}
 		}
 	}
 
-	.difm-lite-thank-you__support-button {
-		padding-bottom: 11px;
-		padding-top: 2px;
+	.difm-lite-thank-you__feature {
+		font-size: 1rem;
+		padding: 60px 24px;
+		text-align: left;
+		max-width: 750px;
+		> div {
+			display: flex;
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 628px;
+			flex-wrap: wrap;
+			@include break-mobile {
+				flex-wrap: nowrap;
+			}
+		}
+		.difm-lite-thank-you__image {
+			min-width: 150px;
+			padding: 0 14px;
+			width: 100%;
+			text-align: center;
+			margin-bottom: 40px;
 
-		@include breakpoint-deprecated( '<480px' ) {
+			@include break-mobile {
+				flex-wrap: nowrap;
+				text-align: left;
+				margin-bottom: 0;
+				width: 138px;
+			}
+		}
+		h3 {
+			color: var( --color-text-subtle );
+			clear: none;
+			font-size: 1.25rem;
+		}
+		p {
+			color: var( --color-text-subtle );
+			margin-bottom: 16px;
 			margin-top: 16px;
 		}
 	}
