--- a/client/my-sites/checkout/checkout-thank-you/difm/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/difm/style.scss
@@ -1,7 +1,7 @@
 @import '@wordpress/base-styles/breakpoints';
 @import '@wordpress/base-styles/mixins';
 
-.difm-lite-thank-you {
+.checkout-thank-you {
 	&.main {
 		max-width: 960px;
 		> .card {
